hack/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-rbactory
  labels:
    name: k8s-rbactory
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
