hack/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rbactory-backend
  namespace: k8s-rbactory
  labels:
    app: k8s-rbactory-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: k8s-rbactory-backend
